change email link to text

--- a/vignettes/qpcr_analysis.Rmd
+++ b/vignettes/qpcr_analysis.Rmd
@@ -821,7 +821,7 @@ I'd be glad to receive any comments or ideas to help the package forward.
     
 ## Contacts:
 
-My email is: [mahmoud.s.fahmy@students.kasralainy.edu.eg](mahmoud.s.fahmy@students.kasralainy.edu.eg)  
+My email is: mahmoud.s.fahmy@students.kasralainy.edu.eg
 
 # Notes
 
